# ohana_commons

./: .gitignore  README.md  TODOS.md  autobuild.sh  ci.sh  meson.build  setup_deb.sh  valgrind.sh
include/: bit_stuff.h  dynamic_str.h  internal_handle.h  ohana_commons.h
lib/: dynamic_str.c  find_next_power_of_two.c  return_five.c
lib/bit_stuff/: find_next_power_of_two.c
tests/: meson.build  test_return_five.c
tests/bit_stuff/: meson.build  test_find_next_power_of_two.c
tests/dynamic_str/: meson.build  test_oc_dynamic_str_append.c  test_oc_dynamic_str_chop.c  test_oc_dynamic_str_destroy.c  test_oc_dynamic_str_init.c  test_oc_dynamic_str_resize.c
