test_oc_dynamic_str_init = executable('test_oc_dynamic_str_init',
  'test_oc_dynamic_str_init.c',
  dependencies : [libacommons_dep]
)
test('test_oc_dynamic_str_init', test_oc_dynamic_str_init)

test_oc_dynamic_str_destroy = executable('test_oc_dynamic_str_destroy',
  'test_oc_dynamic_str_destroy.c',
  dependencies : [libacommons_dep]
)
test('test_oc_dynamic_str_destroy', test_oc_dynamic_str_destroy)

test_oc_dynamic_str_resize = executable('test_oc_dynamic_str_resize',
  'test_oc_dynamic_str_resize.c',
  dependencies : [libacommons_dep]
)
test('test_oc_dynamic_str_resize', test_oc_dynamic_str_resize)

test_oc_dynamic_str_append = executable('test_oc_dynamic_str_append',
  'test_oc_dynamic_str_append.c',
  dependencies : [libacommons_dep]
)
test('test_oc_dynamic_str_append', test_oc_dynamic_str_append)

test_oc_dynamic_str_chop = executable('test_oc_dynamic_str_chop',
  'test_oc_dynamic_str_chop.c',
  dependencies : [libacommons_dep]
)
test('test_oc_dynamic_str_chop', test_oc_dynamic_str_chop)
